# epic6

./: .gitignore  COPYRIGHT  KNOWNBUGS  Makefile.in  README.md  UPDATES  configure  configure.ac  configure.in
doc/: SILLINESS  epic6.1  python  scrollind  set_context
include/: alias.h  alist.h  cJSON.h  clock.h  commands.h  config.h  ctcp.h  dcc.h  debug.h  defs.h.in  ecdsatool.h  extlang.h  files.h  functions.h  hook.h  ignore.h  input.h  irc.h  irc_std.h  ircaux.h  keys.h  lastlog.h  levels.h  names.h  network.h  newio.h  options.h  output.h  reg.h  scrambox.h  screen.h  sdbm.h  sedcrypt.h  server.h  ssl.h  termx.h  timer.h  vars.h  who.h  window.h  (+1 more)
regress/: funcs  test_xform3  test_xform4
script/: autoquery  builtins  capctl  colors  epic.py  epicrc.example  files  idlealert  ignore  layout  loadformats  mail  mail.py  map  netsplit  new_lastlog  newmail.py  notify  notify.jm  paste  reconnect  sasl  sasl_auth  scan  shortener.py  speak.irc  suppressmotd  tabkey.ce  tabkey.jm  tmux_away  userlist  xmsglog
source/: Makefile.in  alias.c  alist.c  array.c  atonce.c  cJSON.c  clock.c  commands.c  crypt.c  crypto.c  ctcp.c  dcc.c  debug.c  debuglog.c  ecdsatool.c  elf.c  exec.c  expr.c  expr2.c  file-list  files.c  functions.c  hook.c  if.c  info.c.sh.in  input.c  irc.c  ircaux.c  ircsig.c  keys.c  lastlog.c  levels.c  list.c  log.c  logfiles.c  mail.c  names.c  network.c  newio.c  notify.c  (+22 more)
